links and box-2 added

--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -17,6 +17,21 @@
                     <h3>This is a subheading</h3> <!-- External styling -->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quisquam obcaecati? Doloribus quidem accusamus debitis et quasi laboriosam tenetur a blanditiis dolor ipsam nulla, magni sequi animi ea eaque eum.</p> <!-- color by default, defined in body -->
         </div>
+        <div class="box-2">
+            <h1 style="color: red;">Goodbye world</h1> <!-- Inline styling -->
+                <h2>This is a heading</h2>
+                    <h3>This is a subheading</h3> <!-- External styling -->
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quisquam obcaecati? Doloribus quidem accusamus debitis et quasi laboriosam tenetur a blanditiis dolor ipsam nulla, magni sequi animi ea eaque eum.</p> <!-- color by default, defined in body -->
+        </div>
+        <div class="categories">
+            <h2>Categories </h2>
+            <ul>
+                <li><a href="#">Category 1</a></li>
+                <li><a href="#">Category 2</a></li>
+                <li><a href="#">Category 3</a></li>
+                <li><a href="#">Category 4</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
