--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -22,6 +22,8 @@
                 <h2>This is a heading</h2>
                     <h3>This is a subheading</h3> <!-- External styling -->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quisquam obcaecati? Doloribus quidem accusamus debitis et quasi laboriosam tenetur a blanditiis dolor ipsam nulla, magni sequi animi ea eaque eum.</p> <!-- color by default, defined in body -->
+
+                    <a class="button" href="#">Read more</a>
         </div>
         <div class="categories">
             <h2>Categories </h2>
@@ -32,6 +34,22 @@
                 <li><a href="#">Category 4</a></li>
             </ul>
         </div>
-    </div>
+        <form class="my-form">
+            <div class="form-group">
+                <label>Name: </label>
+                <input type="text" name="name">
+            </div>
+            <div class="form-group">
+                <label>Email: </label>
+                <input type="text" name="name">
+            </div>
+            <div class="form-group">
+                <label>Message: </label>
+                <input type="text" name="message">
+            </div>
+            <input class="button" type="submit" value="Submit">
+        </form>
+    </div> <!-- container ends -->
+    <div style="margin-top:100px"></div>
 </body>
 </html>
