main-block and sidebar

--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -49,6 +49,36 @@
             </div>
             <input class="button" type="submit" value="Submit">
         </form>
+        <div class="block">
+            <h3>Heading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ad adipisci quod pariatur fugit officiis culpa cum. Magni, perspiciatis dolorum.  
+                </p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ad adipisci quod pariatur fugit officiis culpa cum. Magni, perspiciatis dolorum.  
+                </p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ad adipisci quod pariatur fugit officiis culpa cum. Magni, perspiciatis dolorum.  
+                </p>
+        </div>
+        
+        <div class="clr">
+
+        <div id="main-block">
+            <h3>Heading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ad adipisci quod pariatur fugit officiis culpa cum. Magni, perspiciatis dolorum.  
+                </p>
+        </div>
+
+        <div id="sidebar">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ad adipisci quod pariatur fugit officiis culpa cum. Magni, perspiciatis dolorum.  
+            </p>
+        </div>
+
+        </div>
     </div> <!-- container ends -->
     <div style="margin-top:100px"></div>
 </body>
