--- a/csscheatsheet/index.html
+++ b/csscheatsheet/index.html
@@ -65,7 +65,7 @@
                 </p>
         </div>
         
-        <div class="clr">
+        <div class="clr"></div>
 
         <div id="main-block">
             <h3>Heading</h3>
@@ -77,6 +77,15 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ad adipisci quod pariatur fugit officiis culpa cum. Magni, perspiciatis dolorum.  
             </p>
         </div>
+
+        <div class="clr"></div>
+
+        <div class="p-box">
+            <h1>Hello</h1>
+               <h2>Goodbye</h2>
+        </div>
+
+
 
         </div>
     </div> <!-- container ends -->
